--- a/frappe/public/js/frappe/list/list_item_row.html
+++ b/frappe/public/js/frappe/list/list_item_row.html
@@ -5,9 +5,9 @@
     {% if (meta.title_field && !settings.hide_name_column) {
         var is_different = data.name !== data[meta.title_field];
     %}
-    <div class="list-item__content list-item__content--id text-right hidden-xs hidden-sm">
+    <div class="list-item__content list-item__content--id hidden-xs hidden-sm ellipsis">
         {% if (is_different) { %}
-        <a class="text-muted" href="#Form/{%= data._doctype_encoded %}/{%= data._name_encoded %}">
+        <a class="text-muted ellipsis" href="#Form/{%= data._doctype_encoded %}/{%= data._name_encoded %}">
             {%= data.name %}</a>
         {% } %}
     </div>
