--- a/frappe/public/js/frappe/ui/filters/filter_dashboard_head.html
+++ b/frappe/public/js/frappe/ui/filters/filter_dashboard_head.html
@@ -1,6 +1,6 @@
 <div class="filter-dash-item">
 	<div class="filter-header">
-		<h6 class="h6 filter-label" data-name="{{ label }}">{{ label }}</h6>
+		<h6 class="h6 filter-label" data-name="{{ field }}">{{ label }}</h6>
 		{% if (type!=="Date" && type!=="Datetime" && type!=="DateRange") { %}
 		<div class="dropdown search-dropdown hide pull-right">
 			<i class="dropdown-toggle octicon octicon-search text-muted"
@@ -14,7 +14,7 @@
 		<div class="dropdown sort-dropdown pull-right">
 			<i class="pull-right dropdown-toggle
 				filter-sort-active octicon octicon-gear text-muted"
-				data-name="{{ label }}" data-sort-by="number" data-order="desc"
+				data-name="{{ field }}" data-sort-by="number" data-order="desc"
 				data-toggle="dropdown"/>
 			<ul class="dropdown-menu">
 				<li class="filter-sort-item" data-sort-by="alphabet" data-order="asc">
@@ -34,7 +34,7 @@
 	<div class="filter-input filter-input-date" data-name="{{ field }}">
 	</div>
 	{% } else { %}
-	<ul class="list-unstyled sidebar-menu filter-stat" data-name="{{ label }}">
+	<ul class="list-unstyled sidebar-menu filter-stat" data-name="{{ field }}">
 
 	</ul>
 	{% } %}
