Passsword Policy Enhancement
In Security Settings, the Password Plociy can be enabled and the passcord strength score can be set.

User will see helpful password validation messages when they change password.

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -20,7 +20,7 @@
 		</div>
 		<p class='password-strength-message text-muted small hidden'></p>
 		<button type="submit" id="update"
-			class="btn btn-primary">{{_("Update")}}</button>
+			class="btn btn-primary" disabled>{{_("Update")}}</button>
     </form>
 </div>
 <style>
@@ -139,6 +139,12 @@ frappe.ready(function() {
 						} else {
 							set_strength_indicator('green', feedback);
 						}
+
+						if(feedback.password_policy_validation_passed){
+							$('#update').prop("disabled", false);
+						}else{
+							$('#update').prop("disabled", true);
+						}
 					}
 				}
 			}
@@ -148,15 +154,21 @@ frappe.ready(function() {
 
 	window.set_strength_indicator = function(color, feedback) {
 		var message = [];
-		if (feedback) {
+		feedback.help_msg = "";
+		if(!feedback.password_policy_validation_passed){
+			feedback.help_msg = ". Include Underscores, Numbers and Capital Letters in the password Eg: Eastern_43A";
+		}
+		if (feedback && !feedback.password_policy_validation_passed) {
 			if (feedback.suggestions && feedback.suggestions.length) {
+				feedback.suggestions = feedback.suggestions + feedback.help_msg;
 				message = message.concat(feedback.suggestions);
 			} else if (feedback.warning) {
+				feedback.warning = feedback.warning + feedback.help_msg;
 				message.push(feedback.warning);
 			}
 
 			if (!message.length && feedback.crack_time_display) {
-				message.push(__('This password will take {0} to crack', [feedback.crack_time_display]));
+				message.push(__('This password will take {0} to crack {1}', [feedback.crack_time_display,  feedback.help_msg]));
 				if (feedback.score > 3) {
 					message.push('👍');
 				}
