Enhance Update Password to handle Password Policy

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -20,7 +20,7 @@
 		</div>
 		<p class='password-strength-message text-muted small hidden'></p>
 		<button type="submit" id="update"
-			class="btn btn-primary" disabled>{{_("Update")}}</button>
+			class="btn btn-primary">{{_("Update")}}</button>
     </form>
 </div>
 <style>
@@ -132,18 +132,10 @@ frappe.ready(function() {
 						feedback.crack_time_display = r.message.crack_time_display;
 						feedback.score = score;
 
-						if (score < 2) {
-							set_strength_indicator('red', feedback);
-						} else if (score < 4) {
-							set_strength_indicator('yellow', feedback);
-						} else {
-							set_strength_indicator('green', feedback);
-						}
-
 						if(feedback.password_policy_validation_passed){
-							$('#update').prop("disabled", false);
+							set_strength_indicator('green', feedback);
 						}else{
-							$('#update').prop("disabled", true);
+							set_strength_indicator('red', feedback);
 						}
 					}
 				}
@@ -156,22 +148,23 @@ frappe.ready(function() {
 		var message = [];
 		feedback.help_msg = "";
 		if(!feedback.password_policy_validation_passed){
-			feedback.help_msg = ". Include Underscores, Numbers and Capital Letters in the password Eg: Eastern_43A";
+			feedback.help_msg = " Hint : Include Underscores, Numbers and Capital Letters in the password Eg: Eastern_43A";
 		}
-		if (feedback && !feedback.password_policy_validation_passed) {
-			if (feedback.suggestions && feedback.suggestions.length) {
-				feedback.suggestions = feedback.suggestions + feedback.help_msg;
-				message = message.concat(feedback.suggestions);
-			} else if (feedback.warning) {
-				feedback.warning = feedback.warning + feedback.help_msg;
-				message.push(feedback.warning);
-			}
-
-			if (!message.length && feedback.crack_time_display) {
-				message.push(__('This password will take {0} to crack {1}', [feedback.crack_time_display,  feedback.help_msg]));
-				if (feedback.score > 3) {
-					message.push('👍');
+		if (feedback) {
+			if(!feedback.password_policy_validation_passed){
+				if (feedback.suggestions && feedback.suggestions.length) {
+					feedback.suggestions = feedback.suggestions + feedback.help_msg;
+					message = message.concat(feedback.suggestions);
+				} else if (feedback.warning) {
+					feedback.warning = feedback.warning + feedback.help_msg;
+					message.push(feedback.warning);
 				}
+
+				if (!message.length) {
+					message.push(__('{0}', [feedback.help_msg]));
+				}
+			}else{
+				message.push('Success! You are good to go 👍');
 			}
 		}
 
