update test cases to use strong password

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -148,7 +148,7 @@ frappe.ready(function() {
 		var message = [];
 		feedback.help_msg = "";
 		if(!feedback.password_policy_validation_passed){
-			feedback.help_msg = " Hint : Include Underscores, Numbers and Capital Letters in the password Eg: Eastern_43A";
+			feedback.help_msg = " Hint : Include Underscores, Numbers and Capital Letters in the password Eg: Eastern_43A1W";
 		}
 		if (feedback) {
 			if(!feedback.password_policy_validation_passed){
