Add test cases, add default value for minimum password score, make error messages translatable

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -164,7 +164,7 @@ frappe.ready(function() {
 					message.push(__('{0}', [feedback.help_msg]));
 				}
 			}else{
-				message.push('Success! You are good to go 👍');
+				message.push(__('Success! You are good to go 👍'));
 			}
 		}
 
