--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -148,20 +148,20 @@ frappe.ready(function() {
 		var message = [];
 		feedback.help_msg = "";
 		if(!feedback.password_policy_validation_passed){
-			feedback.help_msg = " Hint : Include Underscores, Numbers and Capital Letters in the password Example : Eastern_43A1W";
+			feedback.help_msg = __("Hint: Include symbols, numbers and capital letters in the password");
 		}
 		if (feedback) {
 			if(!feedback.password_policy_validation_passed){
 				if (feedback.suggestions && feedback.suggestions.length) {
-					feedback.suggestions = feedback.suggestions + feedback.help_msg;
+					feedback.suggestions = feedback.suggestions + ' ' + feedback.help_msg;
 					message = message.concat(feedback.suggestions);
 				} else if (feedback.warning) {
-					feedback.warning = feedback.warning + feedback.help_msg;
+					feedback.warning = feedback.warning + ' ' + feedback.help_msg;
 					message.push(feedback.warning);
 				}
 
 				if (!message.length) {
-					message.push(__('{0}', [feedback.help_msg]));
+					message.push(feedback.help_msg);
 				}
 			}else{
 				message.push(__('Success! You are good to go 👍'));
