New UI component SimpleList
- Refactored upload.js to use SimpleList
- Use new upload dialog in File list

--- a/frappe/public/js/frappe/list/header_select_all_like_filter.html
+++ b/frappe/public/js/frappe/list/header_select_all_like_filter.html
@@ -1,5 +1,5 @@
 {% if (_checkbox) { %}
-<input class="list-select-all hidden-xs" type="checkbox"
+<input class="list-select-all hidden-xs" type="checkbox" style="margin-right: 5px;"
 	title="{%= __("Select All") %}">
 {% } %}
 <span class="liked-by-filter-button">
