--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -16,7 +16,7 @@
 			</div>
 
 			<input type="text" id="login_email"
-				class="form-control" placeholder="{{ _('Email address') }}" required autofocus>
+				class="form-control" placeholder="{{ _('Email address or Mobile number') }}" required autofocus>
 
 			<input type="password" id="login_password"
 				class="form-control" placeholder="{{ _('Password') }}" required>
