translation errors in several msgprint

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -52,11 +52,11 @@ frappe.ready(function() {
 		}
 
 		if(!args.old_password && !args.key) {
-			frappe.msgprint("Old Password Required.");
+			frappe.msgprint(__("Old Password Required."));
 			return;
 		}
 		if(!args.new_password) {
-			frappe.msgprint("New Password Required.")
+			frappe.msgprint(__("New Password Required."))
 			return;
 		}
 
