--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -28,7 +28,7 @@
 					    {%= __("My Settings") %}</a></li>
 					<li><a href="#" onclick="return frappe.ui.toolbar.clear_cache();">
 					    {%= __("Reload") %}</a></li>
-					<li><a href="/index" target="_blank">
+					<li><a href="/index" target="_blank" rel="noopener noreferrer">
 						{%= __("View Website") %}</a></li>
 					<li><a href="#background_jobs">
 						{%= __("Background Jobs") %}</a></li>
@@ -54,7 +54,7 @@
 					<li class="divider"></li>
 					<li>
 						<a data-link-type="documentation"
-							data-path="/documentation/index" target="_blank">{{ __("Documentation") }}</a>
+							data-path="/documentation/index" target="_blank" rel="noopener noreferrer">{{ __("Documentation") }}</a>
 					</li>
 					<li class="divider documentation-links"></li>
 					<li><a href="#" onclick="return frappe.ui.toolbar.show_about();">
