--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -73,7 +73,8 @@
 						</a>
 						{% } %}
 
-						{% if (data.communication_medium === "Email" && data.sender !== user_email) { %}
+						{% if (data.communication_medium === "Email"
+							&& data.sender !== frappe.session.user_email) { %}
 						<a class="text-muted reply-link pull-right timeline-content-show"
 							data-name="{%= data.name %}">{%= __("Reply") %}</a>
 						{% } %}
