Review changes and added minified date

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -12,9 +12,9 @@
 
 	<div class="pull-left media-body">
 		<div class="media-content-wrapper">
-			<div class="action-btns hidden-xs">
+			<div class="action-btns">
 				{% if(data.delete) { %}
-				<div class="pull-right close-btn-container">
+				<div class="pull-right hidden-xs close-btn-container">
 					<span class="small text-muted">
 						{%= data.delete %}
 					</span>
