Changes for tilte, delete icon change and removed duplicate date.

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -96,7 +96,7 @@
 						{% } %}
 					<span class="text-muted commented-on hidden-xs">
 						&ndash; {%= data.comment_on %}</span>
-					<span class="text-muted visible-xs commented-on" style="display: inline-block!important;">
+					<span class="text-muted commented-on-small">
 						&ndash; {%= data.comment_on_small %}</span>
 					<span class="comment-likes hidden-xs"
 						data-liked-by=\'{{ JSON.stringify(data._liked_by) }}\'>
