Class name changes.

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -163,7 +163,7 @@
 						{% if(data.link_doctype && data.link_name) { %}
 						</a>
 						{% } %}
-						<span class="text-muted commented-one" style="font-weight: normal;">
+						<span class="text-muted commented-on" style="font-weight: normal;">
 						&ndash; {%= data.comment_on %}</span>
 				</div>
 			{% } else { %}
