--- a/frappe/public/js/frappe/form/footer/timeline.html
+++ b/frappe/public/js/frappe/form/footer/timeline.html
@@ -7,7 +7,7 @@
     		</button>
 		</div>
         <div class="comment-input-container">
-    		<textarea class="form-control comment-input"></textarea>
+    		<div class="form-control comment-input"></div>
 			<input type="data" class="hidden mention-input">
 			<div class="text-muted small">{{ __("Ctrl+Enter to add comment") }}</div>
         </div>
