frappe.ui.CommentArea

--- a/frappe/public/js/frappe/form/footer/timeline.html
+++ b/frappe/public/js/frappe/form/footer/timeline.html
@@ -6,11 +6,7 @@
     			{%= __("Comment") %}
     		</button>
 		</div>
-        <div class="comment-input-container">
-    		<div class="form-control comment-input"></div>
-			<input type="data" class="hidden mention-input">
-			<div class="text-muted small">{{ __("Ctrl+Enter to add comment") }}</div>
-        </div>
+        <div class="comment-input-container"></div>
     </div>
 	<div class="timeline-new-email">
 		{% if(doctype === "Communication") { %}
