--- a/frappe/www/third_party_apps.html
+++ b/frappe/www/third_party_apps.html
@@ -1,45 +1,60 @@
 {% extends "templates/web.html" %}
 
 {% block title %} {{ _("Third Party Apps") }} {% endblock %}
-
 {% block header %}
 	<h1>{{ _("Third Party Apps") }}</h1>
 {% endblock %}
 
-{% block style %}
-
+{% block page_sidebar %}
+{% include "templates/pages/web_sidebar.html" %}
 {% endblock %}
 
+{% block style %}
+{% endblock %}
 
-{% block page_content %}	
+{% block page_content %}
 
-<p>
-<!-- <a class='small underline task-status-switch' data-status='Open'>{{ _("Show closed") }}</a> -->
-</p>
+<!-- no-cache -->
 
 <div class='padding'></div>
 
-<h4>{{ _("You are logged into following apps") }}</h4>
-
-{% for app in apps %}
-<div class="web-list-item">
-	<div class="row">
-		<div class="col-xs-6">
-			{{ app.app_name }}
-		</div>
-		<div class="col-xs-6 text-right small text-muted">
-			{{ frappe.utils.pretty_date(app.modified) }}
-			<a class="revoke-tokens text-muted" data-client_id="{{ app.name }}" data-app_name="{{ app.app_name }}"><i class="fa fa-close" aria-hidden="true"></i></a>
+{% if app %}
+<h4>{{ app.app_name }}</h4>
+	<div class="web-list-item">
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="well">
+					<div class="text-muted">{{ _("This will log out {0} from all other devices".format(app.app_name)) }}</div>
+					<div class="padding"></div>
+					<div class="text-right">						
+						<button class="btn btn-default" onclick="location.href = '/third_party_apps';">Cancel</button>
+						<button class="btn btn-danger btn-delete-app" data-client_id="{{ app.client_id }}">Revoke</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
-{% endfor %}
-
-<ul>
-</ul>
-
-</div>
-
+{% elif apps|length > 0 %}
+<h4>{{ _("Active Sessions") }}</h4>
+	{% for app in apps %}
+	<div class="web-list-item">
+		<div class="row">
+			<div class="col-xs-6">
+				{{ app.app_name }}
+			</div>
+			<div class="col-xs-6 text-right small text-muted">
+				{{ frappe.utils.pretty_date(app.creation) }}
+				<a class="text-muted" href="/third_party_apps?app={{ app.name }}"><i class="fa fa-close" aria-hidden="true"></i></a>
+			</div>
+		</div>
+	</div>
+	{% endfor %}
+{% else %}
+	<div class="text-center text-muted">
+		{{ _("No Active Sessions")}}
+	</div>
+{% endif %}
+<div class="padding"></div>
 <script>
 {% include "templates/includes/integrations/third_party_apps.js" %}
 </script>
