[Fix] Typo me.html

--- a/frappe/www/me.html
+++ b/frappe/www/me.html
@@ -22,7 +22,7 @@
 						<h6 class="text-muted">{{ _("Edit Profile") }}</h6>
 					</a></li>
 					<li><a href="/third_party_apps">
-						<h6 class="text-muted">{{ _("Manage Third Party Appss") }}</h6>
+						<h6 class="text-muted">{{ _("Manage Third Party Apps") }}</h6>
 					</a></li>
 				</ul>
 			</div>
