frappe node first commit

--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -1,12 +1,7 @@
 {% extends "templates/web.html" %}
 
-{% block style %}
-<style>
-	{% include "templates/includes/login/login.css" %}
-</style>
-{% endblock %}
-
 {% block page_content %}
+<link href="/assets/frappe/css/login.css" rel="stylesheet">
 <!-- {{ for_test }} -->
 <section class='for-login'>
 	<div class="login-content page-card" style="margin-top: 30px;">
