[fix] add phone, email, skype in contact us, fixes frappe/erpnext#1226

--- a/frappe/www/contact.html
+++ b/frappe/www/contact.html
@@ -3,7 +3,11 @@
 {% block title %}{{ heading or "Contact Us"}}{% endblock %}
 
 {% block page_content %}
-
+<style>
+	.address {
+		line-height: 1.7em;
+	}
+</style>
 <div class="contact-content">
 	{% if introduction %}
 	<div>
@@ -37,7 +41,7 @@
 			</div>
 		</div>
 		{% if address_title %}
-		<div class="col-md-3 col-md-offset-1"
+		<div class="col-md-3 col-md-offset-1 address"
 				itemscope itemtype="http://schema.org/PostalAddress">
 			<h4 style="margin-top: 0px;"><i class="fa fa-map-marker"></i> {{ address_title }}</h4>
 			{% if address_line1 %}
@@ -56,8 +60,18 @@
 				<span itemprop="postalCode">{{ pincode }}</span><br>
 			{% endif %}
 			{% if country %}
-				<span itemprop="addressCountry">{{ country }}</span><br>
+				<span itemprop="addressCountry">{{ country }}</span><br><br>
 			{% endif %}
+			{% if phone %}
+				<i class='fa fa-phone'></i> <span itemprop="telephone">{{ phone }}</span><br>
+			{% endif %}
+			{% if email_id %}
+				<i class='fa fa-envelope'></i> <span itemprop="email">{{ email_id }}</span><br>
+			{% endif %}
+			{% if skype %}
+				<i class='fa fa-skype'></i> <span itemprop="email">{{ skype }}</span><br>
+			{% endif %}
+
 		</div>
 		{% endif %}
 	</div>
