[fix] [translation] switch to desk, #3328

--- a/frappe/www/message.html
+++ b/frappe/www/message.html
@@ -15,6 +15,11 @@ html, body {
 	background-color: #f5f7fa;
 }
 {% endif %}
+{% if card_width %}
+.page-card {
+	max-width: {{ card_width }}px;
+}
+{% endif %}
 </style>
 <div class='page-card'>
 	<div class='page-card-head'>
