--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -17,9 +17,16 @@
 
 			<input type="text" id="login_email"
 				class="form-control" placeholder="{{
-					_('Email address or Mobile number')
-					if frappe.utils.cint(frappe.db.get_value('System Settings', 'System Settings', 'allow_login_using_mobile_number'))
-					else _('Email address') }}"
+					_('Email address or Mobile number or Username')
+					if frappe.utils.cint(frappe.db.get_value('System Settings', 'System Settings', 'allow_login_using_mobile_number')) and frappe.utils.cint(frappe.db.get_value('System Settings', 'System Settings', 'allow_login_using_user_name'))
+					else (
+							_('Email address or Username')
+							if frappe.utils.cint(frappe.db.get_value('System Settings', 'System Settings', 'allow_login_using_user_name'))
+							else (
+								_('Email address or Mobile number')
+								if frappe.utils.cint(frappe.db.get_value('System Settings', 'System Settings', 'allow_login_using_mobile_number'))
+								else _('Email address'))
+						) }}"
 				required autofocus>
 
 
