--- a/frappe/public/js/frappe/list/list_item_row_head.html
+++ b/frappe/public/js/frappe/list/list_item_row_head.html
@@ -2,10 +2,11 @@
     <!-- title + columns -->
     {%= main %}
 
-    <!-- id -->
+    <!-- id
     {% if(list.meta.title_field && !list.settings.hide_name_column) { %}
     <div class="list-item__content hidden-xs hidden-sm"></div>
     {% } %}
-    <!-- comment -->
-    <div class="list-item__content list-item__content--activity hidden-xs text-right list-row-right"></div>
+
+    <!-- comment BAZZ IS NOT INTERESTED IN COMMENTS
+    <div class="list-item__content list-item__content--activity hidden-xs text-right list-row-right"></div>-->
 </div>
