adds full screen toggle

--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -76,6 +76,9 @@
 				<ul class="dropdown-menu" id="dropdown-notification" role="menu" style="max-height: 480px; overflow-y: auto;">
 				</ul>
 			</li>
+			<li class="hidden-xs hidden-sm">
+			  <a class="toggle-fullscreen" href="#" data-toggle="full-screen"></a>
+			</li>
 		</ul>
 
 		<div id="search-modal" class="modal fade" role="dialog">
