--- a/frappe/public/js/frappe/list/list_sidebar.html
+++ b/frappe/public/js/frappe/list/list_sidebar.html
@@ -18,6 +18,8 @@
 	<li class="divider"></li>
 	<li class="list-link" data-view="List">
 		<a href="#List/{%= doctype %}/List">{%= __("List") %}</a></li>
+	<li class="list-link" data-view="Report">
+		<a href="#List/{%= doctype %}/Report">{%= __("Report") %}</a></li>
 	<li class="hide list-link" data-view="Image">
 		<a href="#List/{%= doctype %}/Image">{%= __("Images") %}</a></li>
 	<li class="hide list-link" data-view="Gantt">
