--- a/frappe/public/js/frappe/form/footer/timeline.html
+++ b/frappe/public/js/frappe/form/footer/timeline.html
@@ -10,9 +10,11 @@
 			<button class="btn btn-default btn-new-email btn-xs">
 			{%= __("New Email") %}
 		</button>
+			<button class="btn btn-default btn-new-interaction btn-xs">
+				{%= __("New Interaction") %}
+		</button>
 		{% } %}
 	</div>
-    <div class="timeline-items">
-
-    </div>
+	<div class="timeline-schedule"></div>
+	<div class="timeline-items"></div>
 </div>
