New proposal after feedbacks

--- a/frappe/public/js/frappe/form/footer/timeline.html
+++ b/frappe/public/js/frappe/form/footer/timeline.html
@@ -11,7 +11,7 @@
 			{%= __("New Email") %}
 		</button>
 			<button class="btn btn-default btn-new-interaction btn-xs">
-				{%= __("New Interaction") %}
+				{%= __("New Activity") %}
 		</button>
 		{% } %}
 	</div>
