--- a/frappe/public/js/frappe/form/footer/timeline.html
+++ b/frappe/public/js/frappe/form/footer/timeline.html
@@ -10,9 +10,11 @@
 			<button class="btn btn-default btn-new-email btn-xs">
 			{%= __("New Email") %}
 			</button>
+			{% if(allow_events_in_timeline===1) { %}
 			<button class="btn btn-default btn-new-interaction btn-xs">
 				{%= __("New Event") %}
 			</button>
+			{% } %}
 		{% } %}
 	</div>
     <div class="timeline-items">
