refactor(Comment): Comment is now frappe control
- Use quill's bubble theme for comment control

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -128,6 +128,7 @@
 
 					{%= data.content_html %}
 				</div>
+				<div class="timeline-item-edit"></div>
 				{% if(data.attachments && data.attachments.length) { %}
 				<div style="margin: 10px 0px">
 					{% $.each(data.attachments, function(i, a) { %}
