Show recorded calls to frappe.db.sql on recorder portal page

--- a/frappe/www/recorder.html
+++ b/frappe/www/recorder.html
@@ -5,7 +5,8 @@
 {% block page_content %}
 <div class="recorder-content">
 	<div>
-        <h3>Recorder</h3>
+		<h3>Recorder</h3>
 	</div>
+	<div>{{ result }}</div>
 </div>
 {% endblock %}
