Desk Sidebar [2018-code-sprint] [Desk 2.0]
A left-anchored sidebar that displays the desktop icons on all pages,
allowing for quick and easy navigation.

Users can enable Desk Sidebar as an alternative to the traditional
Desktop in their user settings. When the sidebar is enabled, users can
choose a custom homepage. In addition, desk will take on a fluid,
full-width layout to maximize screen space.

Users can also switch to a full-width layout while maintaining
traditional Desktop navigation by manually enabling it in their user
settings.

Co-authored-by: John Kelley <johnhkelley1@gmail.com>
Co-authored-by: Tyler Matteson <tyler@agritheory.com>

--- a/frappe/public/js/frappe/ui/page.html
+++ b/frappe/public/js/frappe/ui/page.html
@@ -1,5 +1,5 @@
 <div class="page-head">
-	<div class="container">
+	<div class="app-container {{app_container_class}}">
 		<div class="row">
 			<div class="col-md-7 col-sm-8 col-xs-6 page-title">
 				<!-- title -->
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 </div>
-<div class="container page-body">
+<div class="app-container page-body {{app_container_class}}">
 	<div class="page-toolbar hide">
 		<div class="container">
 		</div>
