--- a/frappe/www/desk.html
+++ b/frappe/www/desk.html
@@ -29,6 +29,7 @@
     </div>
 	<div class="main-section">
 		<header></header>
+		<div id="desk_sidebar_div"></div>
 		<div id="body_div"></div>
 		<footer></footer>
 	</div>
