[fix] toggle title based on setup status

--- a/frappe/www/update-password.html
+++ b/frappe/www/update-password.html
@@ -6,7 +6,7 @@
 
 <div class="page-card">
 	<div class='page-card-head'>
-		<span class='indicator blue'>{{ _("Reset Password") }}</span>
+		<span class='indicator blue'>{{ _("Reset Password") if frappe.db.get_default('company') else _("Set Password")}}</span>
 	</div>
     <form id="reset-password">
 		<div class="form-group">
