--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -13,7 +13,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li class="user-progress hide" title="Your Setup Progress">
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#" onclick="return false;"  style="height: 40px;">
-					<div class="progress-chart" style"width: 50px; margin-top: 8px;"><div class="progress">
+					<div class="progress-chart" style="width: 50px; margin-top: 8px;"><div class="progress">
 						<div class="progress-bar"></div>
 					</div></div>
 				</a>
