fix(email): Email status changes to Read
The email recieved template was in unsubscribe email. Hence it
didn't used to function in case the emails were sent from DocTypes
like Issue, wherein the unsubscribe email template is not used.
Moved it to email_footer template.

Signed-off-by: Ameya Shenoy <shenoy.ameya@gmail.com>

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -67,7 +67,7 @@
 									var indicator_class = "green";
 								} else if (data.delivery_status === "Sending") {
 									var indicator_class = "orange";
-								} else if (in_list("Opened", "Read", data.delivery_status)) {
+								} else if (in_list(["Opened", "Read"], data.delivery_status)) {
 									var indicator_class = "blue";
 								} else {
 									var indicator_class = "red";
