--- a/frappe/public/js/frappe/ui/page.html
+++ b/frappe/public/js/frappe/ui/page.html
@@ -1,5 +1,5 @@
 <div class="page-head">
-	<div class="container">
+	<div class="container-fluid container-margin-10">
 		<div class="row">
 			<div class="col-md-7 col-sm-8 col-xs-6 page-title">
 				<!-- title -->
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 </div>
-<div class="container page-body">
+<div class="container-fluid container-margin-10 page-body">
 	<div class="page-toolbar hide">
 		<div class="container">
 		</div>
