Using checkbox as dark mode indicator

--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -39,7 +39,7 @@
 					<li><a href="/index" target="_blank" rel="noopener noreferrer">
 						{%= __("View Website") %}</a></li>
 					<li><a href="#" onclick="frappe.set_dark_mode();">
-						{%= __("Dark Mode") %}</a></li>
+						{%= __("Dark Mode") %}<input type="checkbox" id="dark_mode" style="float: right;"></a></li>
 					<li><a href="#background_jobs">
 						{%= __("Background Jobs") %}</a></li>
 					<li class="divider"></li>
