--- a/frappe/www/unsubscribed.html
+++ b/frappe/www/unsubscribed.html
@@ -8,7 +8,8 @@
 		<span class='indicator blue'>Unsubscribe from Newsletter</span>
 	</div>
 	<div><b>
-		Do you want to unsubscribe from these Email group?</b>
+	</b>
+	has been successfully unsubscribed from selected mailing list.</b>
 	</div>
 </div>
 <style>
