--- a/frappe/www/unsubscribe.html
+++ b/frappe/www/unsubscribe.html
@@ -1,60 +1,68 @@
 {% extends "templates/web.html" %}
 
-{% block title %} {{_("Reset Password")}} {% endblock %}
+{% block title %} Unsubscribe from Newsletter {% endblock %}
 
 {% block page_content %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-$(document).ready(function(){
-	$("#select").click(function(){
-		if($("#select").prop("checked") == true){
-			$(".group").prop('checked', true);
-		}
-		else{
-			$(".group").prop('checked', false);
-		}
+	$(document).ready(function(){
+		$("#select").click(function(){
+			if($("#select").prop("checked") == true){
+				$(".group").prop('checked', true);
+			}
+			else{
+				$(".group").prop('checked', false);
+			}
+		});
 	});
-});
 </script>
-{% if valid is  not defined %}
-<div class="page-card">
-	<div class='page-card-head'>
-		<span class='indicator blue'>Unsubscribe from Newsletter</span>
-	</div>
-	<div><b>
-		Do you want to unsubscribe from these Email group?</b>
-	</div>
-<hr>
-	<form method="POST" action="unsubscribed">
-			<input type="hidden" name="user_email" value="{{email}}">
+{% if status == "confirmation page" %}
+	<div class="page-card">
+		<div class='page-card-head'>
+			<span class='indicator blue'>Unsubscribe from Newsletter</span>
+		</div>
+		<div><b>
+			Do you want to unsubscribe from these Email group?</b>
+		</div>
+		<hr style="margin-top: 0px">
+		<form method="post">
+				<input type="hidden" name="user_email" value="{{email}}">
+				<div class="checkbox">
 			<div class="checkbox">
-		<div class="checkbox">
-			<label><input type="checkbox" id="select">Select all</label>
-		</div>
-		{% for group in email_groups %}
-		{% if current_group[0].email_group == group.email_group %}
-		<div class="checkbox">
-			<label><input type="checkbox" checked class="group" name='{{group.email_group}}'>{{group.email_group}}</label>
-		</div>
-		{% else %}
-		<div class="checkbox">
-				<label><input type="checkbox" class="group" name='{{group.email_group}}'>{{group.email_group}}</label>
-		</div>
-		{% endif %}
-		{% endfor %}
-		<p class='password-strength-message text-muted small hidden'></p>
-		<button type="submit" id="unsubscribe"
-			class="btn btn-primary">Unsubscribe</button>
-	</form>
-</div>
-{% else %}
-<div class="page-card">
-	<div class='page-card-head'>
-		<span class='indicator blue'>Unsubscribe from Newsletter</span>
+				<label><input type="checkbox" id="select"><span style="padding-left: 20px">Select all</span></label>
+			</div>
+			<hr style="margin-top: -10px">
+			{% for group in email_groups %}
+			{% if current_group[0].email_group == group.email_group %}
+				<div class="checkbox">
+					<label><input type="checkbox" checked class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+				</div>
+			{% else %}
+				<div class="checkbox">
+						<label><input type="checkbox" class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+				</div>
+			{% endif %}
+			{% endfor %}
+			<p class='password-strength-message text-muted small hidden'></p>
+			<button type="submit" id="unsubscribe"
+				class="btn btn-primary">Unsubscribe</button>
+		</form>
 	</div>
-	<b>Invalid Request</b>
-</div>
+{% elif status == "Unsubscribed page" %}
+	<div class="page-card">
+		<div class='page-card-head'>
+			<span class='indicator blue'>Unsubscribe from Newsletter</span>
+		</div>
+		<b>You have been unsubscribed from selected mailing list.</b>
+	</div>
+{%else %}
+	<div class="page-card">
+		<div class='page-card-head'>
+			<span class='indicator blue'>Unsubscribe from Newsletter</span>
+		</div>
+		<b>Invalid Request.</b>
+	</div>
 {% endif %}
 <style>
 .hero-and-content {
@@ -65,16 +73,6 @@ $(document).ready(function(){
 
 {% block style %}
 <style>
-	.password-strength-indicator {
-		float: right;
-		padding: 15px;
-		margin-top: -38px;
-		margin-right: -7px;
-	}
-
-	.password-strength-message {
-		margin-top: -10px;
-	}
 	{% include "templates/styles/card_style.css" %}
 </style>
 {% endblock %}
