--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -38,7 +38,7 @@
 					    {%= __("Reload") %}</a></li>
 					<li><a href="/index" target="_blank" rel="noopener noreferrer">
 						{%= __("View Website") %}</a></li>
-					<li><a href="#" onclick="frappe.dark_mode.toggle_mode();">
+					<li><a href="#" id="dark_mode_route" onclick="frappe.dark_mode.toggle_mode();">
 						{%= __("Dark Mode") %}<input type="checkbox" id="dark_mode" style="float: right;"></a></li>
 					<li><a href="#background_jobs">
 						{%= __("Background Jobs") %}</a></li>
@@ -56,7 +56,7 @@
 						style="padding: 50% 7px; font-size: 17px; background-color: #fafbfc; font-weight: 100;">?</span>
 				</a>
 				<ul class="dropdown-menu" role="menu">
-					<div class="input-group" style="border-bottom: 1px solid #d1d8dd;">
+					<div class="input-group">
 						<input id="input-help" type="text" placeholder="{{ __("What do you need help with?") }}" autofocus>
 						<span class="input-group-btn"><button class="btn btn-default">{{ __("Go") }}</button></span>
 					</div>
