--- a/frappe/www/unsubscribe.html
+++ b/frappe/www/unsubscribe.html
@@ -24,33 +24,39 @@
 			<div class='page-card-head'>
 				<span class='indicator blue'>Unsubscribe</span>
 			</div>
-			<div>
-				 Select groups you wish to unsubscribe from.
+			{% if email_groups != "none" %}
+				<div>
+					Select groups you wish to unsubscribe from.
+					<span class="text-muted">mishranaman123@gmail.com</span>
+				</div>
+				<form method="post">
+						<input type="hidden" name="user_email" value="{{email}}">
+						<input type="hidden" name="csrf_token" value="{{ frappe.session.csrf_token }}">
+						<div class="checkbox">
+					<div class="checkbox" style="margin-top: 10px; border-bottom:2px solid #D3D3D3; border-width: 1px">
+						<label><input type="checkbox" id="select"><span style="padding-left: 20px">Select all</span></label>
+					</div>
+					{% for group in email_groups %}
+					{% if current_group[0].email_group == group.email_group %}
+						<div class="checkbox">
+							<label><input type="checkbox" checked class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+						</div>
+					{% else %}
+						<div class="checkbox">
+								<label><input type="checkbox" class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+						</div>
+					{% endif %}
+					{% endfor %}
+					<p class='password-strength-message text-muted small hidden'></p>
+					<button type="submit" id="unsubscribe"
+						class="btn btn-primary">Unsubscribe</button>
+				</form>
+			{% else %}
+				<div>
+					You are not registered to any mailing list.
 				<span class="text-muted">mishranaman123@gmail.com</span>
 			</div>
-			
-			<form method="post">
-					<input type="hidden" name="user_email" value="{{email}}">
-					<input type="hidden" name="csrf_token" value="{{ frappe.session.csrf_token }}">
-					<div class="checkbox">
-				<div class="checkbox" style="margin-top: 10px; border-bottom:2px solid #D3D3D3; border-width: 1px">
-					<label><input type="checkbox" id="select"><span style="padding-left: 20px">Select all</span></label>
-				</div>
-				{% for group in email_groups %}
-				{% if current_group[0].email_group == group.email_group %}
-					<div class="checkbox"  style='padding-top: 10px;'>
-						<label><input type="checkbox" checked class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
-					</div>
-				{% else %}
-					<div class="checkbox">
-							<label><input type="checkbox" class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
-					</div>
-				{% endif %}
-				{% endfor %}
-				<p class='password-strength-message text-muted small hidden'></p>
-				<button type="submit" id="unsubscribe"
-					class="btn btn-primary">Unsubscribe</button>
-			</form>
+			{% endif %}
 		</div>
 
 	{% elif status == "Unsubscribed page" %}
